--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,17 @@ Lucky/app/src/main/res/drawable-xxxhdpi/icon_78.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_79.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_8.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_9.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_80.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_81.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_82.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_83.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_84.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_85.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_86.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_87.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_88.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_89.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_90.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_91.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_92.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_93.png
