--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ Lucky/app/src/main/res/drawable-xxxhdpi/icon_90.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_91.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_92.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_93.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_94.png
