--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ Lucky/app/src/main/res/drawable-xxxhdpi/icon_91.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_92.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_93.png
 Lucky/app/src/main/res/drawable-xxxhdpi/icon_94.png
+Lucky/app/src/main/res/drawable-xxxhdpi/icon_98.png
